chore: adding background and navigation to home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 	<body>
 		<div id="app">
+			<h1>Ugarak Shooter 2025 (remastered)</h1>
 			<div id="game-container"></div>
+			<p>Stara verzia: <a href="https://shooter1.netlabs.sk/">Ugarak Shooter 2013</a>.</p>
 		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
